# ChangeLog for dev-util/cpptest
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/cpptest/ChangeLog,v 1.16 2012/10/04 15:52:19 sping Exp $

*cpptest-1.1.2 (04 Oct 2012)

  04 Oct 2012; Sebastian Pipping <sping@gentoo.org> +cpptest-1.1.2.ebuild:
  Bump to 1.1.2

  21 May 2012; Kacper Kowalik <xarthisius@gentoo.org> cpptest-1.1.0.ebuild,
  cpptest-1.1.1.ebuild:
  Add missing inheritance of eutils.eclass

  15 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> cpptest-1.1.1.ebuild:
  x86 stable wrt bug #397017

  05 Jan 2012; Michael Weber <xmw@gentoo.org> cpptest-1.1.1.ebuild:
  ppc/ppc64/sparc stable (bug 397017)

  04 Jan 2012; Sebastian Pipping <sping@gentoo.org> cpptest-1.1.1.ebuild:
  Remove .la files (bug #397017, comment 2)

  02 Jan 2012; Agostino Sarubbo <ago@gentoo.org> cpptest-1.1.1.ebuild:
  Stable for AMD64, wrt bug #397017

*cpptest-1.1.1 (26 Mar 2010)

  26 Mar 2010; Sebastian Pipping <sping@gentoo.org> +cpptest-1.1.1.ebuild:
  Trivial-bump to 1.1.1

  18 Jan 2010; Robert Buchholz <rbu@gentoo.org> metadata.xml:
  Dropping maintenance, adding sping

  04 Jul 2009; Brent Baude <ranger@gentoo.org> cpptest-1.1.0.ebuild:
  Marking cpptest-1.1.0 ppc64 for bug 272818

  01 Jun 2009; Ferris McCormick <fmccor@gentoo.org> cpptest-1.1.0.ebuild:
  Sparc stable, required for Bug #271815.

  31 May 2009; Markus Meier <maekke@gentoo.org> cpptest-1.1.0.ebuild:
  amd64/x86 stable, bug #271815

  31 May 2009; nixnut <nixnut@gentoo.org> cpptest-1.1.0.ebuild:
  ppc stable #271815

  20 Mar 2009; Tiago Cunha <tcunha@gentoo.org> cpptest-1.1.0.ebuild:
  keyworded ~arch for sparc, bug 261242

  19 Mar 2009; Joseph Jezak <josejx@gentoo.org> cpptest-1.1.0.ebuild:
  Marked ~ppc64 for bug #261242.

  19 Mar 2009; Joseph Jezak <josejx@gentoo.org> cpptest-1.1.0.ebuild:
  Marked ~ppc for bug #261242.

*cpptest-1.1.0 (15 Mar 2009)

  15 Mar 2009; Robert Buchholz <rbu@gentoo.org>