@@ -1,8 +1,9 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cpptest/cpptest-1.1.2.ebuild,v 1.1 2012/10/04 15:52:19 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cpptest/cpptest-1.1.2.ebuild,v 1.2 2012/11/04 01:29:20 sping Exp $
 
-EAPI=2
+EAPI=4
+inherit eutils
 
 DESCRIPTION="Simple but powerful unit testing framework for C++"
 HOMEPAGE="http://cpptest.sourceforge.net/"
@@ -16,6 +17,8 @@ IUSE="doc"
 DEPEND="doc? ( app-doc/doxygen )"
 RDEPEND=""
 
+DOCS=( AUTHORS BUGS NEWS README )
+
 src_configure() {
 	econf \
 		$(use_enable doc) \
@@ -23,8 +26,6 @@ src_configure() {
 }
 
 src_install() {
-	emake install DESTDIR="${D}" || die "emake install failed"
-	dodoc AUTHORS BUGS NEWS README || die
-
-	find "${D}" -type f -name '*.la' -delete || die
+	default
+	prune_libtool_files
 }
